Fix layout issues

--- a/src/main/wc/button/button.less
+++ b/src/main/wc/button/button.less
@@ -1,7 +1,6 @@
 button { border: 0;
-	 margin: 0;
-	 color: var(--b);
 	 padding: 0;
+	 color: var(--b);
 	 font-size: 12px;
 	 cursor: pointer;
 	 background: none;
